--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-header {
+.cabeçalho {
     background-color: #424E61;
     color: white;
+    display: flex;
+    justify-content: space-around;
 }
 
-.{
-
+.cabeçalho-imagem{
+    width: 20%;
 }
