--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
+*{
+    margin: 0%;
+    padding: 0;
+}
 .cabeçalho {
     background-color: #424E61;
     color: white;
     display: flex;
     justify-content: space-around;
+    margin: 24px 0;
 }
 
 .cabeçalho-imagem{
     width: 20%;
 }
+    .cabeçalho-lista-item{
+        display: inline-block;
+        margin: 0 160px;
+    }
+    
