--- a/style.css
+++ b/style.css
@@ -7,14 +7,17 @@
     color: white;
     display: flex;
     justify-content: space-around;
-    margin: 24px 0;
+   padding:  24px 0;
+    align-items: center;
 }
 
 .cabeçalho-imagem{
     width: 20%;
 }
-    .cabeçalho-lista-item{
-        display: inline-block;
-        margin: 0 160px;
-    }
+.cabeçalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
+
+}
     
