--- a/style.css
+++ b/style.css
@@ -20,4 +20,12 @@
     font-size: 24px;
 
 }
-    
+   
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient( #424E61,#4EbfE9);
+    color: white;
+}
