--- a/style.css
+++ b/style.css
@@ -28,4 +28,15 @@
 .escola{
     background-image: linear-gradient( #424E61,#4EbfE9);
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 50px 0;
 }
